#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2014-06-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999910 released.

        * More changes for AWS.


2014-06-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999909 released.

        * More changes for AWS.


2014-06-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999908 released.

        * More changes for AWS.


2014-06-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999907 released.

        * More changes for AWS.


2014-06-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999906 released.

        * Cleaned up Makefile.PL.

        * Added dependencies for PPL.


2014-06-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999905 released.

        * Modified Makefile.PL to use less memory.

        * Added most dependencies to install during Makefile.PL.
          This is to allow FullAuto to install fully functional
          on AWS mini free tier Ubuntu servers.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999904 released.

        * Added Class::Unload to Makefile.PL.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999903 released.

        * Added CPAN::Shell->bye to Makefile.PL.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999902 released.

        * Added debugging for Ubuntu install.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999901 released.
