@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 2bc6bceba678c4a177ba80f54eb3ad33bb9e6ff4 ChangeLog
+SHA1 29146da64815d5e7f43f34d6c5c498f58a392b23 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 295a64ecb2dc7a1eda5074e0b9171eaa579ab6c8 META.yml
-SHA1 2276777bd338ad013cd731970af1901c6013ab6b Makefile.PL
+SHA1 ddaa4eca408254d5a57a9eeb3d25228215af60ff META.yml
+SHA1 d67bc6ba9eeeef1de365d40c84e1e56dc5d6807b Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 07262cd3ae7b279e04e48238c977d17e6db51c71 lib/Net/FullAuto.pm
+SHA1 ae66385df418e31a492fd75286378f2eb13f5370 lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTp5sJAAoJEBa/9Pad787Eu4sH/jAMGPrgOWaaYbgh1nObFpLg
-QlsOizAJ/yZKqYw9PSDVqxSFtrFbfeaiuznx8SUb1tTze/h/4LkrnzBSS6SV4opM
-RAJbvy49Z10xMTDx5Qtn6W6+KLuOZwlU0Emw8weE0jxYu1MXTR93Th5Sbb4HDkUH
-tIlds8nhwBmH23GcQAjUSUjUo0X89/uYh/hRsIIGTEDMBmGo/yP301idnlFP3gf8
-QQanV4iMcl6wXFEi/DF1XG8qHXdul0Km71rAPJNuOSaLL9uRRSGvtQEzv+jxm/5A
-9+ShXGnPAEgctYCLT7kmh0g9HxCeKeRep10l+ZPFpbtzKmBTgMhUH5n+JFwU8xc=
-=bNxA
+iQEcBAEBAgAGBQJTqDoaAAoJEBa/9Pad787EUqkIAIOJk/gKGQw1GbuKl/c6Vxiy
+S38Gw4cT1Tv/PYWrOjXEsRYM79Ozuk4FjQ67ZFFKsO9bAReDxFthy+vE2hIs+5dl
+5UXHgAPjViuR+qkMWIpTDA2ZsCaYKKi9ZoECyj1i28CFY9VWcUAEFilFlAq831y/
+UQ/psPYNtJesmER/bWbYzycQpV3T+hZhmGxn9cjeu0Ri55DOHhH+Y+FDhPnVxREp
+jmtc/dmPfM9ugoKo1dCz9qlTwK01+xkdb/QE1jVqd5JoeU46DwxsbR8oq9bdiLjx
+B5dK9QemBR1dhkzFXUFuEwIplHPGViA1mwmF9++Y947jKt6hJS6DbyvACujKSKk=
+=RL0s
 -----END PGP SIGNATURE-----
