@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9999999910';
+our $VERSION='0.9999999911';
 
 
 use 5.005;
